# shared_clipboard_client

./: README.md  main.py  pyproject.toml  terminal_test.py  terminal_test_std.py
client/: api.py  clipboard.py  sync.py
