[project]
name = "shared-clipboard-client"
version = "0.1.1"
description = "shared-cilpboard-client is a command-line tool that allows you to share your clipboard content across multiple devices using a shared clipboard server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.21.0",
    "dashing>=0.1.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
]
